--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       hours = 1
       minutes = 5
       seconds = 3
-      if(location.href.indexOf('time='){
+      if(location.href.indexOf('time=')!==-1){
         let s = location.href.split('time=')[1]
         s = s.split('&')[0].split(':')
         if(s.length==3) [hours, minutes, seconds] = s
